--- a/theme/header.html
+++ b/theme/header.html
@@ -17,3 +17,10 @@
 		</div>
 		<div class="row">
 			<section class="col-xs-12">
+				<div class="form-group">
+					<input id="search" class="form-control" placeholder="Search">
+				</div>
+			</section>
+		</div>
+		<div class="row">
+			<section class="col-xs-12">
