--- a/theme/header.html
+++ b/theme/header.html
@@ -12,14 +12,15 @@
 	<div class="container">
 		<div class="row">
 			<section class="col-xs-12">
-				<h4 id="breadcrumbs" class="text-muted"></h4>
+				<div class="form-group">
+					<input id="search" class="form-control" placeholder="Search" autofocus="">
+				</div>
 			</section>
 		</div>
 		<div class="row">
 			<section class="col-xs-12">
-				<div class="form-group">
-					<input id="search" class="form-control" placeholder="Search">
-				</div>
+				<ul id="breadcrumbs" class="breadcrumb">
+				</ul>
 			</section>
 		</div>
 		<div class="row">
