--- a/theme/header.html
+++ b/theme/header.html
@@ -19,8 +19,7 @@
 		</div>
 		<div class="row">
 			<section class="col-xs-12">
-				<ul id="breadcrumbs" class="breadcrumb">
-				</ul>
+				<ul id="breadcrumbs" class="breadcrumb"></ul>
 			</section>
 		</div>
 		<div class="row">
