Refactor search bar

--- a/theme/footer.html
+++ b/theme/footer.html
@@ -1,10 +1,10 @@
 </section>
 </div>
 <div class="row">
-	<footer class="col-xs-12 clearfix">
-		<hr>
-		<small id="date" class="text-muted pull-right"></small>
-	</footer>
+    <footer class="col-xs-12 clearfix">
+        <hr>
+        <small class="text-muted pull-right"></small>
+    </footer>
 </div>
 </div>
 <script type="text/javascript" src="/theme/js/jquery.min.js"></script>
