--- a/theme/header.html
+++ b/theme/header.html
@@ -5,16 +5,17 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/theme/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/theme/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="/theme/css/<bootstrap-theme class="min"></bootstrap-theme>.css">
 	<link rel="stylesheet" href="/theme/css/fancybox.min.css">
-	<title>Apache directory archive</title>
+	<title>Apache Directory Archive</title>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
-			<section class="col-xs-12">
-				<div class="form-group">
-					<input id="search" class="form-control" placeholder="Search" autofocus="">
+			<section class="form-group col-xs-12">
+				<div class="input-group">
+					<input id="search" class="form-control" placeholder="Enter search string..." autofocus="">
+					<span class="input-group-addon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span>
 				</div>
 			</section>
 		</div>
