--- a/theme/404.html
+++ b/theme/404.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/theme/css/bootstrap.min.css">
     <link rel="stylesheet" href="/theme/css/bootstrap-theme.min.css">
-    <title>404 - Apache directory archive</title>
+    <title>404 - Apache Directory Archive</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 text-center">
                 <h1>Oops!</h1>
-                <h2>404 Not Found</h2>
+                <h3>404 Not Found</h3>
                 <p class="text-muted">Sorry, an error has occured - requested file not found!</p>
-                <a href="/" class="btn btn-primary"><span class="glyphicon glyphicon-home"></span> Take Me Home</a>
+                <a href="/" class="btn btn-primary"><span class="glyphicon glyphicon-home"></span> Take me home</a>
             </div>
         </div>
     </div>
