--- a/theme/header.html
+++ b/theme/header.html
@@ -5,7 +5,7 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/theme/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/theme/css/<bootstrap-theme class="min"></bootstrap-theme>.css">
+	<link rel="stylesheet" href="/theme/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="/theme/css/fancybox.min.css">
 	<title>Apache Directory Archive</title>
 </head>
