--- a/theme/error.html
+++ b/theme/error.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/theme/icons/archive.png">
     <link rel="stylesheet" href="/theme/css/bootstrap.min.css">
     <link rel="stylesheet" href="/theme/css/bootstrap-theme.min.css">
     <title>Apache Directory Archive</title>
